k8s-files/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: voting-app
spec:
  selector:
    matchLabels:
      app: db 
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        resources:
          requests:
           memory: "256Mi"
           cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports: 
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes: 
      - name: db-data
        persistentVolumeClaim:
         claimName: db-pvc
