k8s-files/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis 
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis 
  template:
    metadata:
      labels:
        app: redis 
    spec:
      containers:
      - name: redis 
        image: redis:alpine
        ports:
        - containerPort: 6379
