k8s-files/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
  namespace: voting-app
spec:
  selector:
    matchLabels:
      app: vote 
  template:
    metadata:
      labels:
        app: vote 
    spec:
      containers:
      - name: vote 
        image: dockersamples/examplevotingapp_vote
        ports:
        - containerPort: 80
