k8s-files/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: voting-app
spec:
  selector:
    matchLabels:
      app: worker 
  template:
    metadata:
      labels:
        app: worker 
    spec:
      containers:
      - name: worker 
        image: dockersamples/examplevotingapp_worker
