k8s-files/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  type: NodePort
  selector:
    app: result 
  ports:
  - port: 5001
    targetPort: 80
    nodePort: 31001
