k8s-files/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote 
  namespace: voting-app
spec:
  type: NodePort
  selector:
    app: vote 
  ports:
  - port: 5000
    targetPort: 80
    nodePort: 31000
