k8s-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: voting-app 
spec:
  ingressClassName: nginx
  rules:
  - host: vote.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vote 
            port: 
              number: 5000
  - host: result.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result-service
            port: 
              number: 5001
